# prompt-saver-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TEST_RESULTS.md  claude_desktop_config.json.example  docker-compose.yml  init-mongo.js  pyproject.toml  run-mcp-server.sh  test_all_tools.py  test_file_storage.py
examples/: __init__.py  example_usage.py
prompt_saver_mcp/: __init__.py  database.py  embeddings.py  llm_service.py  models.py  prompt_processor.py  prompt_retriever.py  prompt_service.py  prompt_updater.py  server.py
prompt_saver_mcp/storage/: __init__.py  base.py  file_storage.py  mongodb_storage.py
